--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./src/assets/jdicon.png" />
+
+    <meta property="og:title" content="This is John Dick's personal site" />
+    <meta property="og:description" content="My personal website" />
+    <link rel="icon" type="image/png" href="/assets/jdicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>John Dick</title>
   </head>
