--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
     <meta property="og:title" content="This is John Dick's personal site" />
     <meta property="og:description" content="John Dick" />
     <link rel="icon" type="image/png" href="/assets/jdicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>John Dick</title>
+    <title>johndick.me</title>
   </head>
   <body>
     <div id="root"></div>
